# solana-trading-bot

./: .env.template  .gitignore  Makefile  PROJECT_STRUCTURE.txt  QUICKSTART.md  README.md  SETUP_COMPLETE.md  SETUP_VALIDATION.md  STEP_1.2_COMPLETE.md  STEP_1.3_COMPLETE.md  STEP_1.4_COMPLETE.md  STEP_2.1_COMPLETE.md  STEP_2.2_COMPLETE.md  STEP_2.3_COMPLETE.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: README.md  development.yaml  paper.yaml  production.yaml
configs/: dev.yaml  training.yaml
docker/: README.md  docker-compose.yml  init.sql
docs/: STEP_3.1_COMPLETE.md  STEP_3.2_COMPLETE.md  STEP_3.3_COMPLETE.md  STEP_3.4_COMPLETE.md
models/ppo/: evaluations.npz
scripts/: analyze_results.py  compare_baselines.py  download_data.py  download_real_data.py  monitor_training.py  optimize_ppo.py  run_backtest.py  start_paper_trading.py  test_advanced_env.py  test_backtesting.py  test_binance_connection.py  test_config.py  test_data_collection.py  test_data_quality.py  test_database.py  test_feature_engineering.py  test_logging.py  test_reward_functions.py  test_trading_env.py  train_agent.py  train_dqn.py  train_fair_comparison.py  train_ppo.py  train_sac.py
src/solana_rl_bot/agents/: __init__.py  dqn_agent.py  ppo_agent.py  sac_agent.py
src/solana_rl_bot/backtesting/: __init__.py  backtester.py  metrics.py  visualizer.py
src/solana_rl_bot/config/: __init__.py  base.py  data_quality.py  database.py  exchange.py  loader.py  trading.py
src/solana_rl_bot/data/collectors/: __init__.py  base.py  binance.py  data_collector.py
src/solana_rl_bot/data/features/: __init__.py  feature_calculator.py  feature_pipeline.py
src/solana_rl_bot/data/storage/: db_manager.py
src/solana_rl_bot/data/validation/: __init__.py  data_validator.py  outlier_detector.py  quality_monitor.py
src/solana_rl_bot/environment/: __init__.py  advanced_trading_env.py  continuous_trading_env.py  rewards.py  trading_env.py
src/solana_rl_bot/risk/: __init__.py  risk_manager.py
src/solana_rl_bot/strategies/: __init__.py  base_strategy.py  buy_and_hold.py  rsi_strategy.py  sma_crossover.py
src/solana_rl_bot/utils/: __init__.py  db_logger.py  logging.py
tests/: test_config.py
